# snow_report_mapper

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  stats.rs
src/loaders/: mod.rs  servicenow.rs
src/loaders/utils/: json.rs
src/mappers/: mod.rs  output.rs  servicenow.rs
src/serializers/: mod.rs  naive_datetime.rs
src/writers/: mod.rs  output.rs
