[package]
name = "snow_report_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.16", features = ["derive", "cargo"] }
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0.82"
termsize = "0.1.6"
